--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "aloha/twilio": "^5.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa-laravel": "^2.1",
         "spatie/laravel-permission": "^6.15"
     },
