--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "aloha/twilio": "^5.0",
+        "beyondcode/laravel-websockets": "^1.14",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.0",
@@ -14,6 +15,7 @@
         "laravel/tinker": "^2.7",
         "maatwebsite/excel": "^3.1",
         "pragmarx/google2fa-laravel": "^2.1",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.15"
     },
     "require-dev": {
