--- a/package.json
+++ b/package.json
@@ -100,16 +100,19 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.3",
         "del": "^6.0.0",
+        "laravel-echo": "^2.0.2",
         "laravel-mix": "^6.0.39",
         "laravel-mix-purgecss": "^6.0.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.5",
         "postcss-import": "^14.0.2",
+        "pusher-js": "^8.4.0",
         "replace-in-file-webpack-plugin": "^1.0.6",
         "resolve-url-loader": "^4.0.0",
         "rtlcss": "^3.5.0",
         "sass": "1.55.0",
         "sass-loader": "13.2.0",
+        "vue": "^3.5.13",
         "webpack-rtl-plugin": "^2.0.0"
     }
 }
