--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": "^8.0.2",
         "aloha/twilio": "^5.0",
         "beyondcode/laravel-websockets": "^1.14",
+        "google/cloud-firestore": "^1.48",
         "guzzlehttp/guzzle": "^7.2",
+        "kreait/firebase-php": "^7.18",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.0",
         "laravel/socialite": "^5.6",
